# sweethome3d

./: .gitignore  .project  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  Makefile  README.TXT  THIRDPARTY-LICENSE-JDOM.TXT  build.xml  environment.yml  release-please-config.json  version.txt
.github/workflows/: ci.yml  release.yml
docs/: AI_ASSISTANT.md  JAVA_MODERNIZATION.md  OPTIMIZATION_PROGRESS.md  PERFORMANCE.md  WEBXR_VR.md
install/portable/: README.TXT
install/windows/: installerInnoSetup.iss  signedInstallerInnoSetup.iss
native/model-lod/: CMakeLists.txt  ModelLODNative.cpp
scripts/: local-release.sh  package-release.ps1  profile-home-3d-fps.sh  profile-home-3d.sh  profile-home-load.sh  profile-plan-interaction.sh  profile-plan-render.sh  profile-startup.sh  run.bat  run.sh  setup-conda-env.sh  test-linux-display.sh  test-wsl-gpu.sh  verify-release.ps1
src/com/eteks/sweethome3d/: SweetHome3D.java  SweetHome3DBootstrap.java  package_cs.properties  package_nl.properties  package_zh_CN.properties  package_zh_TW.properties
src/com/eteks/sweethome3d/applet/: package_nl.properties  package_zh_TW.properties
src/com/eteks/sweethome3d/io/: DefaultFurnitureCatalog_nl.properties  DefaultFurnitureCatalog_zh_CN.properties  DefaultFurnitureCatalog_zh_TW.properties  DefaultHomeInputStream.java  DefaultTexturesCatalog_cs.properties  DefaultTexturesCatalog_nl.properties  DefaultTexturesCatalog_pt.properties  DefaultTexturesCatalog_zh_CN.properties  DefaultTexturesCatalog_zh_TW.properties  DefaultUserPreferences_cs.properties  FileUserPreferences.java  (+6 more)
(+111 files in other folders)
